[package]
name = 'discord-ipc-bridge'
version = '0.0.0'
authors = ['khazhyk <khazhy@gmail.com>']

description = 'discord-ipc'

[dependencies]
serde = "1.0.23"
serde_json = "1.0.7"
libc = "0.2"
rand = "0.3"
serde_derive = "1.0.23"
windows-named-pipe = "0.1.0"
bincode = { git = "https://github.com/TyOverby/bincode" }
time = "0.1.38"
